--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="./favicons/favicon-16x16.png">
 
-    <title>Document</title>
+    <title>Pokédex</title>
 </head>
 
 <body>
+
+    <main>
+        <img src="imagens/pokedex.png" alt="pokedex" class="pokedex">
+    </main>
 
 </body>
 
