--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 
     <main>
+        <img src="favicons/favicon-16x16.png" alt="pokemon" class="pokemon_image">
         <img src="imagens/pokedex.png" alt="pokedex" class="pokedex">
     </main>
 
