--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 <body>
 
     <main>
-        <img src="favicons/favicon-16x16.png" alt="pokemon" class="pokemon_image">
+        <img src="imagens/JO4d.gif" alt="pokemon" class="pokemon_image">
+
+        <h1 class="pokemon_data">
+            <span class="pokemon_number">6</span> -
+            <span class="pokemon_name">Charizard</span>
+        </h1>
+
         <img src="imagens/pokedex.png" alt="pokedex" class="pokedex">
     </main>
 
