--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script defer src="Js/script.js"></script>
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="./favicons/favicon-16x16.png">
 
@@ -16,8 +19,8 @@
         <img src="imagens/JO4d.gif" alt="pokemon" class="pokemon_image">
 
         <h1 class="pokemon_data">
-            <span class="pokemon_number">6</span> -
-            <span class="pokemon_name">Charizard</span>
+            <span class="pokemon_number"></span> -
+            <span class="pokemon_name"></span>
         </h1>
 
         <form class="form">
