--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <main>
-        <img src="imagens/JO4d.gif" alt="pokemon" class="pokemon_image">
+        <img src="" alt="pokemon" class="pokemon_image">
 
         <h1 class="pokemon_data">
             <span class="pokemon_number"></span> -
