--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
         </h1>
 
         <form class="form">
-            <input type="search" class="input_search" placeholder="Name or Number" required>
+            <input type="search" class="input_search" placeholder="Nome ou numero" required>
         </form>
 
         <div class="buttons">
